--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="{{ url_for('index') }}">
-          <i class="fas fa-fire"></i>
+          <i class="fas fa-fire me-1"></i>
           JuFire Studio
         </a>
 
@@ -134,6 +134,11 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
+            <!-- 所有用户可见 -->
+            <li class="nav-item" style="margin: 0 5px">
+              <a class="nav-link" href="{{ url_for('index') }}">首页</a>
+            </li>
+
             <!-- 成员可见 -->
             {% if current_user and current_user.role >= 1 %}
               <li class="nav-item" style="margin: 0 5px">
