fix(base.html): 注释掉设置链接以防止错误访问
等我重构项目结构. 现在开始石山征兆了.

--- a/templates/base.html
+++ b/templates/base.html
@@ -150,7 +150,7 @@
               </li>
 
               <li class="nav-item" style="margin: 0 5px">
-                <a class="nav-link" href="{{ url_for('auth.settings', user_id=session.user_id) }}">设置</a>
+                <a class="nav-link" href="{# {{ url_for('auth.settings', user_id=session.user_id) }} #}">设置</a>
               </li>
             {% endif %}
 
