--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'components/pageBase.html' %}
 
 {% block title %}
   JuFire Studio - 注册
@@ -227,7 +227,7 @@
   </div>
 
   <!-- 引入模态框 -->
-  {% include 'modals/addAvatarModal.html' %}
+  {% include 'components/modals/addAvatarModal.html' %}
 
   <!-- - -->
 {% endblock %}
