--- a/static/css/badge.css
+++ b/static/css/badge.css
@@ -154,3 +154,62 @@
     color: #6c757d;
     border: 1px solid #6c757d;
 }
+
+/* 用户徽章 */
+
+.userBadge-link {
+    border: 1px solid var(--github-border);
+    border-radius: 16px;
+    height: 32px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin: auto 0;
+}
+
+.userBadge-avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    margin: 0 0 0 -1px;
+}
+
+.userBadge-avatar-img {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    display: block;
+}
+
+.userBadge-avatar-fas {
+    font-size: 24px;
+    color: var(--github-accent);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.userBadge-dot-box {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: -1px;
+}
+
+.userBadge-dot {
+    width: 8px;
+    height: 8px;
+    padding: 0;
+    display: inline-block !important;
+}
