--- a/templates/components/pageBase.html
+++ b/templates/components/pageBase.html
@@ -22,8 +22,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link rel="icon" href="{{ url_for('static', filename='img/logo.svg') }}" />
-    <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='css/notification.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/alert.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/badge.css') }}" rel="stylesheet" />
 
     {% block required_css %}
 
@@ -112,7 +113,8 @@
           {% if current_user %}
             <ul class="navbar-account">
               <li class="nav-item" style="display: flex; align-items: center; margin: 0 5px">
-                {% include 'components/common/userBadge.html' with user=current_user only %}
+                {% set user = current_user %}
+                {% include 'components/common/userBadge.html' %}
               </li>
             </ul>
             <ul class="navbar-nav">
