--- a/templates/pages/project/info.html
+++ b/templates/pages/project/info.html
@@ -36,35 +36,9 @@
       <div class="mt-auto">
         <div class="d-flex justify-content-between align-items-center">
           <!-- 项目作者 -->
-          <div class="d-flex align-items-center">
-            <a class="nav-link" id="profile_link" href="{{ url_for('auth.profile', user_id=project.author.id) }}">
-              <div id="user_tag" class="me-1">
-                {% if project.author and project.author.avatar_path %}
-                  <img id="user_avatar_img" src="{{ url_for('auth.user_avatar', filename=project.author.avatar_path) }}" />
-                {% else %}
-                  <i id="user_avatar_fas" class="fas fa-user-circle"></i>
-                {% endif %}
-              </div>
-              <small class="text-muted">
-                {% if project.author %}
-                  {{ project.author.username }}
-                {% else %}
-                  未知
-                {% endif %}
-              </small>
-              <div id="user_dot_box">
-                {% if project.author.role == 1 %}
-                  <span class="user_dot rounded-circle bg-primary" title="成员"></span>
-                {% elif project.author.role == 2 %}
-                  <span class="user_dot rounded-circle bg-warning" title="管理员"></span>
-                {% elif project.author.role == 3 %}
-                  <span class="user_dot rounded-circle bg-danger" title="超级管理员"></span>
-                {% else %}
-                  <span class="user_dot rounded-circle bg-secondary" title="未知"></span>
-                {% endif %}
-              </div>
-            </a>
-          </div>
+          {% set user = project.author %}
+          {% include 'components/common/userBadge.html' %}
+
           <!-- 项目创建时间 -->
           <small class="text-muted">{{ project.created_at.strftime('%Y-%m-%d') }}</small>
         </div>
