--- a/templates/components/pageBase.html
+++ b/templates/components/pageBase.html
@@ -62,65 +62,76 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
-            <!-- 所有用户可见 -->
+            <!-- 所有人可见 -->
             <li class="nav-item" style="margin: 0 5px">
               <a class="nav-link" href="{{ url_for('index') }}">首页</a>
             </li>
 
-            <!-- 成员可见 -->
-            {% if current_user and current_user.role >= 1 %}
-              <li class="nav-item" style="margin: 0 5px">
-                <a class="nav-link" href="{{ url_for('navigation.navigation') }}">导航</a>
-              </li>
+            <li class="nav-item" style="margin: 0 5px">
+              <a class="nav-link" href="{{ url_for('navigation.navigation') }}">导航</a>
+            </li>
 
-              <li class="nav-item" style="margin: 0 5px">
-                <a class="nav-link" href="{{ url_for('projects.projects') }}">项目</a>
-              </li>
+            <!-- 登录用户可见 -->
+            {% if current_user %}
+              <!-- 成员可见 -->
+              {% if current_user.role >= 1 %}
+                <li class="nav-item" style="margin: 0 5px">
+                  <a class="nav-link" href="{{ url_for('projects.projects') }}">项目</a>
+                </li>
+              {% endif %}
 
-              <li class="nav-item" style="margin: 0 5px">
-                <a class="nav-link" href="">设置</a>
-              </li>
-            {% endif %}
-
-            <!-- 管理员可见 -->
-            {% if current_user and current_user.role >= 2 %}
-              <li class="nav-item dropdown" style="margin: 0 5px">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">管理</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <!-- 管理员可见 -->
-                  <li>
-                    <a class="dropdown-item" href="{{ url_for('admin.admin_studio_info') }}">工作室信息</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{{ url_for('admin.admin_projects') }}">项目管理</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{{ url_for('admin.admin_navigation') }}">导航管理</a>
-                  </li>
-
-                  <!-- 超级管理员可见 -->
-
-                  {% if current_user.role >= 3 %}
+              <!-- 游客可见 -->
+              {% if current_user.role >= 0 %}
+                <li class="nav-item dropdown" style="margin: 0 5px">
+                  <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">设置</a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
-                      <a class="dropdown-item" href="{{ url_for('admin.admin_users') }}">用户管理</a>
+                      <a class="dropdown-item" href="{{ url_for('auth.profile', user_id=current_user.id) }}">用户信息</a>
                     </li>
-                  {% endif %}
-                </ul>
-              </li>
+                    <li>
+                      <a class="dropdown-item" href="">用户设置</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="{{ url_for('auth.logout') }}">退出登录</a>
+                    </li>
+                  </ul>
+                </li>
+              {% endif %}
+
+              <!-- 管理员可见 -->
+              {% if current_user.role >= 2 %}
+                <li class="nav-item dropdown" style="margin: 0 5px">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">管理</a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <!-- 管理员可见 -->
+                    <li>
+                      <a class="dropdown-item" href="{{ url_for('admin.admin_studio_info') }}">工作室信息</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="{{ url_for('admin.admin_projects') }}">项目管理</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="{{ url_for('admin.admin_navigation') }}">导航管理</a>
+                    </li>
+
+                    <!-- 超级管理员可见 -->
+                    {% if current_user.role >= 3 %}
+                      <li>
+                        <a class="dropdown-item" href="{{ url_for('admin.admin_users') }}">用户管理</a>
+                      </li>
+                    {% endif %}
+                  </ul>
+                </li>
+              {% endif %}
             {% endif %}
           </ul>
 
           {% if current_user %}
             <ul class="navbar-account">
               <li class="nav-item" style="display: flex; align-items: center; margin: 0 5px">
-                {% with user = current_user %}
+                {% with user=current_user %}
                   {% include 'components/common/userBadge.html' %}
                 {% endwith %}
-              </li>
-            </ul>
-            <ul class="navbar-nav">
-              <li class="nav-item" style="margin: 0 5px">
-                <a class="nav-item" href="{{ url_for('auth.logout') }}">登出</a>
               </li>
             </ul>
           {% else %}
