refactor(模板): 统一仪表盘卡片组件并优化样式
- 将多个页面的统计卡片统一使用dashCards.html组件
- 重构卡片模板结构，提高代码复用性
- 为退出登录按钮添加危险色样式
- 优化模板语法，使用with替代set

--- a/templates/pages/admin/navigations.html
+++ b/templates/pages/admin/navigations.html
@@ -38,20 +38,24 @@
     <!-- 导航统计 -->
     <div class="row mb-4">
       <div class="col-md-3 col-6 mb-3">
-        {% set show = 'categories_total' %}
-        {% include 'components/cards/dashCards.html' %}
+        {% with show='categories_total' %}
+          {% include 'components/cards/dashCards.html' %}
+        {% endwith %}
       </div>
       <div class="col-md-3 col-6 mb-3">
-        {% set show = 'navigations_total' %}
-        {% include 'components/cards/dashCards.html' %}
+        {% with show='navigations_total' %}
+          {% include 'components/cards/dashCards.html' %}
+        {% endwith %}
       </div>
       <div class="col-md-3 col-6 mb-3">
-        {% set show = 'public_navigations_total' %}
-        {% include 'components/cards/dashCards.html' %}
+        {% with show='public_navigations_total' %}
+          {% include 'components/cards/dashCards.html' %}
+        {% endwith %}
       </div>
       <div class="col-md-3 col-6 mb-3">
-        {% set show = 'private_navigations_total' %}
-        {% include 'components/cards/dashCards.html' %}
+        {% with show='private_navigations_total' %}
+          {% include 'components/cards/dashCards.html' %}
+        {% endwith %}
       </div>
     </div>
 
