--- a/templates/components/pageBase.html
+++ b/templates/components/pageBase.html
@@ -101,7 +101,7 @@
                       <hr class="dropdown-divider" />
                     </li>
                     <li>
-                      <a class="dropdown-item" href="{{ url_for('auth.logout') }}">退出登录</a>
+                      <a class="dropdown-item text-danger" href="{{ url_for('auth.logout') }}">退出登录</a>
                     </li>
                   </ul>
                 </li>
